bibbi-backend-api/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bibbi-dev
  labels:
    name: bibbi-dev
